--- a/05_condiciones_if_else/index.html
+++ b/05_condiciones_if_else/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,26 +10,31 @@
 <body>
     <div>
         <main>
-        <h1>Uso de condiciones</h1>
-        <p>Ejercicio n°1</p>
-        <button onclick="edadVotar()">Aprobar Edad para votar</button>
-        <p>Ejercicio n°2</p>
-        <button onclick="validarPassword()">Validar Contraseña</button>
-        <p>Ejercicio n°3</p>
-        <button onclick="parImpar()">Par o Impar</button>
-        <p>Ejercicio n°4</p>
-        <button onclick="temperaturaAmbiental()">Temperatura ambiental</button>
-        <p>Ejercicio n°5</p>
-        <button onclick="compararNumeros()">Comparar numeros</button>
-        <p>Ejercicio n°6</p>
-        <button onclick="note()">ingresar nota</button>
-        <p>Ejercicio n°7</p>
-        <button onclick="usuarioAdmin()">Ingresar usuario</button>
-        <p>Ejercicio n°8</p>
-        <button onclick="palabraMayuscula()">Mayuscula</button>
+            <h1>Uso de condiciones</h1>
+            <p>Ejercicio n°1</p>
+            <button onclick="edadVotar()">Aprobar Edad para votar</button>
+            <p>Ejercicio n°2</p>
+            <button onclick="validarPassword()">Validar Contraseña</button>
+            <p>Ejercicio n°3</p>
+            <button onclick="parImpar()">Par o Impar</button>
+            <p>Ejercicio n°4</p>
+            <button onclick="temperaturaAmbiental()">Temperatura ambiental</button>
+            <p>Ejercicio n°5</p>
+            <button onclick="compararNumeros()">Comparar numeros</button>
+            <p>Ejercicio n°6</p>
+            <button onclick="note()">ingresar nota</button>
+            <p>Ejercicio n°7</p>
+            <button onclick="usuarioAdmin()">Ingresar usuario</button>
+            <p>Ejercicio n°8</p>
+            <button onclick="palabraMayuscula()">Mayuscula</button>
+            <p>Ejercicio n°9</p>
+            <button onclick="hacerDescuento()">Descuento</button>
+            <p>Ejercicio n°10</p>
+            <button onclick="permisoManejar()">licencia para manejar</button>
         </main>
         <script src="static/js/script.js"></script>
     </div>
-    
+
 </body>
+
 </html>
